# Cpp-Course

./: .gitignore  README.md
Cache/: CMakeLists.txt  README.md
Cache/Headers/: Cache.hpp
Cache/PerfectCache/: PerfectCache.cpp
Cache/Source/: 2Q-Cache.cpp
Cache/Tests/: Test01.txt  Test02.txt  Test03.txt  Test04.txt  Test05.txt  Test06.txt  Test07.txt  Test08.txt  Test09.txt  Test10.txt
Triangles/: .gitignore  CMakeCache.txt  CMakeLists.txt  Geometry.hpp  Makefile  README.md  TrINT  TrINT.cpp  TrianglesIntersect.cpp  cmake_install.cmake
Triangles/Headers/: Geometry.hpp
Triangles/Source/: TrianglesIntersection.cpp
Triangles/TESTS/: PCreate  PCreate.cpp  Test10.txt  Test100.txt  Test100THSND.txt  Test10THSND.txt  Test1THSND.txt  Test25THSND.txt
Triangles/TESTS/End-to-end/: ECreate.cpp  Invalid.txt  PCreate.cpp  Test10.txt  Test10THSND.txt  Test1THSND.txt  Test25THSND.txt
Triangles/TESTS/End-to-end/Intersect/: Int20.txt
Triangles/TESTS/ExecTime/: PCreate.cpp  Test10.txt  Test100.txt
Triangles/TESTS/UnitTests/: Determ.cpp  Is2DIntersect.cpp  Is2DSegementIntersect.cpp  Is2DSegmentIntersect.cpp  Is3DSegmentIntersect.cpp  IsNotValidIntersect.cpp  IsParallelSeg.cpp  IsParallelVec.cpp  IsPointInTriangle.cpp  SwapPoints.cpp
